Remove Attribute info when open inventory